removed depreceated pages from pug templates, fixed button text alignment issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -165,7 +165,6 @@ h1 {
                 text-decoration: none;
                 color: #e8b80b;
                 border-color: #e8b80b;
-                max-width: 100px;
         }
 
         button:hover {
